# dataset_db_bench

./: README.md  pyproject.toml  requirements.txt
dbio3d/: __init__.py  hdf5.py  lmdb.py  mmap.py  offset.py  reader.py  sqlite.py  timeit.py  utils.py
notebooks/: test_loads.ipynb
scripts/: create_hdf5.py  create_lmdb.py  create_sqlite.py  reader_bench.py
